# paged

./: Cargo.toml  README.md
paged/: Cargo.toml  README.md
paged-derive/: Cargo.toml  README.md
paged-derive/example/: test.rs
paged-derive/src/: generate.rs  lib.rs
paged/examples/: test.rs
paged/src/: decode.rs  encode.rs  heap.rs  lib.rs  reader.rs  section.rs  utils.rs
paged/src/reader/: cache.rs  page.rs
