[workspace]
members = [
	"paged",
	"paged-derive"
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Timothée Haudebourg <timothee@haudebourg.net>"]
categories = ["data-structures"]
keywords = ["file", "page", "database"]
repository = "https://github.com/timothee-haudebourg/paged"
license = "MIT/Apache-2.0"
readme = "README.md"

[workspace.dependencies]
paged-derive = { path = "paged-derive", version = "0.1.1" }
thiserror = "1.0.40"
educe = "0.4.22"