[package]
name = "paged-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.63"
proc-macro-error = "1.0.4"
syn = "2.0.23"
quote = "1.0.29"
thiserror.workspace = true