[package]
name = "paged-derive"
description = "Derive macro for the `paged` library"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/paged-derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.63"
proc-macro-error = "1.0.4"
syn = "2.0.23"
quote = "1.0.29"
thiserror.workspace = true