[package]
name = "paged"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
derive = ["paged-derive"]

[dependencies]
paged-derive = { workspace = true, optional = true }
thiserror.workspace = true
educe.workspace = true
sharded-slab = "0.1.4"
parking_lot = "0.12.1"

[[example]]
name = "test"
required-features = ["derive"]