[package]
name = "paged"
description = "Read and create read-only paged database files"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/paged"

[features]
derive = ["paged-derive"]

[dependencies]
paged-derive = { workspace = true, optional = true }
thiserror.workspace = true
educe.workspace = true
sharded-slab = "0.1.4"
parking_lot = "0.12.1"

[[example]]
name = "test"
required-features = ["derive"]